# adat-rs

./: Cargo.toml  LICENSE  README.md
adat-rs/: Cargo.toml  README.md
adat-rs/src/: app.rs  main.rs
src/: commands.rs
