[package]
name = "adat-rs"
version = "1.0.0"
edition = "2021"
description = "Active Directory Attack Tool - GUI ile komut üretici (CTF / Pentest)"
authors = ["ADAT-RS"]
license = "MIT"
repository = "https://github.com/BeyazAdam/adat-rs"
keywords = ["active-directory", "pentest", "ctf", "gui", "security"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
arboard = "3.3"
